migrate to production urls'

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <script>
       window.config = {
-        API_URL: 'http://localhost:3000/lightbulbs',
-        WEBSOCKET_URL: 'ws://localhost:8081'  // WebSocket server URL
+        API_URL: 'https://api.portasecura.com/lightbulbs',
+        WEBSOCKET_URL: 'wss://apidashboard.portasecura.com/websocket'  // WebSocket server URL
       };
     </script>
 </head>
